Added Admin transactions and products page

--- a/WingtipToys/WingtipToys.csproj
+++ b/WingtipToys/WingtipToys.csproj
@@ -168,6 +168,8 @@
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
     <Content Include="AddToCart.aspx" />
+    <Content Include="Admin\AdminPageProducts.aspx" />
+    <Content Include="Admin\AdminPageTransactions.aspx" />
     <Content Include="Admin\AdminPage.aspx" />
     <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Catalog\Images\boatbig.png" />
@@ -402,6 +404,20 @@
     </Compile>
     <Compile Include="AddToCart.aspx.designer.cs">
       <DependentUpon>AddToCart.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\AdminPageProducts.aspx.cs">
+      <DependentUpon>AdminPageProducts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\AdminPageProducts.aspx.designer.cs">
+      <DependentUpon>AdminPageProducts.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\AdminPageTransactions.aspx.cs">
+      <DependentUpon>AdminPageTransactions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\AdminPageTransactions.aspx.designer.cs">
+      <DependentUpon>AdminPageTransactions.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\AdminPage.aspx.cs">
       <DependentUpon>AdminPage.aspx</DependentUpon>
