Fixed Branch Access

--- a/WingtipToys/Branch/Web.config
+++ b/WingtipToys/Branch/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <system.web>
     <authorization>
-      <allow roles="canEdit"/>
+      <allow roles="isBranch"/>
       <deny users="*"/>
     </authorization>
   </system.web>
