Images updated + minor changes

--- a/WingtipToys/WingtipToys.csproj
+++ b/WingtipToys/WingtipToys.csproj
@@ -174,6 +174,22 @@
     <Content Include="Admin\AdminPageTransactions.aspx" />
     <Content Include="Admin\AdminPage.aspx" />
     <Content Include="App_Readme\Elmah.txt" />
+    <Content Include="Catalog\Images\AlienwareArea51.png" />
+    <Content Include="Catalog\Images\AnymoteRemoteTVAccessories.jpg" />
+    <Content Include="Catalog\Images\AppleiPadPro2019.jpg" />
+    <Content Include="Catalog\Images\AppleiPhoneXS.jpg" />
+    <Content Include="Catalog\Images\AppleiPhoneXSBatteryCase.jpg" />
+    <Content Include="Catalog\Images\AsusPG35VMonitor.png" />
+    <Content Include="Catalog\Images\Canon18-55mmLens.jpg" />
+    <Content Include="Catalog\Images\CanonPIXMAPrinter.jpg" />
+    <Content Include="Catalog\Images\DellXPS13.jpg" />
+    <Content Include="Catalog\Images\FujiX20.jpg" />
+    <Content Include="Catalog\Images\GarminDashCam55.jpg" />
+    <Content Include="Catalog\Images\GooglePixel4.jpg" />
+    <Content Include="Catalog\Images\GoProHero6Black.jpg" />
+    <Content Include="Catalog\Images\GoProHeroBattery.jpg" />
+    <Content Include="Catalog\Images\HPOfficeJet3830.png" />
+    <Content Include="Catalog\Images\HPOmen.jpg" />
     <Content Include="Catalog\Images\boatbig.png" />
     <Content Include="Catalog\Images\boatpaper.png" />
     <Content Include="Catalog\Images\boatsail.png" />
@@ -191,28 +207,68 @@
     <Content Include="Catalog\Images\planepaper.png" />
     <Content Include="Catalog\Images\planeprop.png" />
     <Content Include="Catalog\Images\rocket.png" />
+    <Content Include="Catalog\Images\Thumbs\AlienwareArea51.png" />
+    <Content Include="Catalog\Images\Thumbs\AnymoteRemoteTVAccessories.jpg" />
+    <Content Include="Catalog\Images\Thumbs\AppleiPadPro2019.jpg" />
+    <Content Include="Catalog\Images\Thumbs\AppleiPhoneXS.jpg" />
+    <Content Include="Catalog\Images\Thumbs\AppleiPhoneXSBatteryCase.jpg" />
+    <Content Include="Catalog\Images\Thumbs\AsusPG35VMonitor.png" />
     <Content Include="Catalog\Images\Thumbs\boatbig.png" />
     <Content Include="Catalog\Images\Thumbs\boatpaper.png" />
     <Content Include="Catalog\Images\Thumbs\boatsail.png" />
     <Content Include="Catalog\Images\Thumbs\busdouble.png" />
     <Content Include="Catalog\Images\Thumbs\busgreen.png" />
     <Content Include="Catalog\Images\Thumbs\busred.png" />
+    <Content Include="Catalog\Images\Thumbs\Canon18-55mmLens.jpg" />
+    <Content Include="Catalog\Images\Thumbs\CanonPIXMAPrinter.jpg" />
     <Content Include="Catalog\Images\Thumbs\carconvert.png" />
     <Content Include="Catalog\Images\Thumbs\carearly.png" />
     <Content Include="Catalog\Images\Thumbs\carfast.png" />
     <Content Include="Catalog\Images\Thumbs\carfaster.png" />
     <Content Include="Catalog\Images\Thumbs\carracer.png" />
+    <Content Include="Catalog\Images\Thumbs\DellXPS13.jpg" />
+    <Content Include="Catalog\Images\Thumbs\FujiX20.jpg" />
+    <Content Include="Catalog\Images\Thumbs\GarminDashCam55.jpg" />
+    <Content Include="Catalog\Images\Thumbs\GooglePixel4.jpg" />
+    <Content Include="Catalog\Images\Thumbs\GoProHero6Black.jpg" />
+    <Content Include="Catalog\Images\Thumbs\GoProHeroBattery.jpg" />
+    <Content Include="Catalog\Images\Thumbs\HPOfficeJet3830.png" />
+    <Content Include="Catalog\Images\Thumbs\HPOmen.jpg" />
+    <Content Include="Catalog\Images\Thumbs\KingstonHyperXFuryRAM.jpg" />
+    <Content Include="Catalog\Images\Thumbs\LenovoTAB.png" />
+    <Content Include="Catalog\Images\Thumbs\LenovoYoga720.jpg" />
+    <Content Include="Catalog\Images\Thumbs\LGC9.jpg" />
+    <Content Include="Catalog\Images\Thumbs\MicrosoftSurfaceMouseAccessories.png" />
+    <Content Include="Catalog\Images\Thumbs\Nokia7Plus.png" />
     <Content Include="Catalog\Images\Thumbs\planeace.png" />
     <Content Include="Catalog\Images\Thumbs\planeglider.png" />
     <Content Include="Catalog\Images\Thumbs\planepaper.png" />
     <Content Include="Catalog\Images\Thumbs\planeprop.png" />
     <Content Include="Catalog\Images\Thumbs\rocket.png" />
+    <Content Include="Catalog\Images\Thumbs\SamsungCHG90.jpg" />
+    <Content Include="Catalog\Images\Thumbs\SamsungGalaxyS10.png" />
+    <Content Include="Catalog\Images\Thumbs\SamsungT5PortableSSD.jpg" />
+    <Content Include="Catalog\Images\Thumbs\SeagateBackupPlusSlimStorage.jpg" />
+    <Content Include="Catalog\Images\Thumbs\SonyA7MarkIII.jpg" />
+    <Content Include="Catalog\Images\Thumbs\SonyXperia10Plus.jpg" />
     <Content Include="Catalog\Images\Thumbs\truckbig.png" />
     <Content Include="Catalog\Images\Thumbs\truckearly.png" />
     <Content Include="Catalog\Images\Thumbs\truckfire.png" />
     <Content Include="Catalog\Images\truckbig.png" />
     <Content Include="Catalog\Images\truckearly.png" />
     <Content Include="Catalog\Images\truckfire.png" />
+    <Content Include="Catalog\Images\KingstonHyperXFuryRAM.jpg" />
+    <Content Include="Catalog\Images\LenovoTAB.png" />
+    <Content Include="Catalog\Images\LenovoYoga720.jpg" />
+    <Content Include="Catalog\Images\LGC9.jpg" />
+    <Content Include="Catalog\Images\MicrosoftSurfaceMouseAccessories.png" />
+    <Content Include="Catalog\Images\Nokia7Plus.png" />
+    <Content Include="Catalog\Images\SamsungCHG90.jpg" />
+    <Content Include="Catalog\Images\SamsungGalaxyS10.png" />
+    <Content Include="Catalog\Images\SamsungT5PortableSSD.jpg" />
+    <Content Include="Catalog\Images\SeagateBackupPlusSlimStorage.jpg" />
+    <Content Include="Catalog\Images\SonyA7MarkIII.jpg" />
+    <Content Include="Catalog\Images\SonyXperia10Plus.jpg" />
     <Content Include="Checkout\CheckoutCancel.aspx" />
     <Content Include="Checkout\CheckoutComplete.aspx" />
     <Content Include="Checkout\CheckoutError.aspx" />
